added force https

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Stopover
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:C2Xuas3XO4nPTi3apPMQKrxqi24FpFXL5Jb7c45m/ec=
 APP_DEBUG=true
 APP_URL=http://localhost
